# gtest-cmake-gcov-example

./: CMakeLists.txt  README.md
libfoo/: foo.cpp  foo.h
test/: CMakeLists.txt  CMakeLists.txt_bak
test/testfoo/: CMakeLists.txt
